tests/fixtures/valid/hello.ket
qubit q
H q
let r = measure q
