tests/fixtures/invalid/measured-gate.ket
qubit q
let r = measure q
H q
